--- a/SeudoBuild.Agent/packages.config
+++ b/SeudoBuild.Agent/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AsyncIO" version="0.1.26.0" targetFramework="net461" />
-  <package id="CommandLineParser" version="2.1.1-beta" targetFramework="net461" />
-  <package id="Nancy" version="1.4.4" targetFramework="net461" />
-  <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="AsyncIO" version="0.1.69" targetFramework="net462" />
+  <package id="CommandLineParser" version="2.5.0" targetFramework="net462" />
+  <package id="Nancy" version="2.0.0" targetFramework="net462" />
+  <package id="Nancy.Hosting.Self" version="2.0.0" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net462" />
 </packages>
