--- a/SeudoBuild.Pipeline.Tests/packages.config
+++ b/SeudoBuild.Pipeline.Tests/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnit" version="3.5.0" targetFramework="net45" />
+  <package id="Castle.Core" version="4.4.0" targetFramework="net471" />
+  <package id="NSubstitute" version="4.2.0" targetFramework="net471" />
+  <package id="NUnit" version="3.12.0" targetFramework="net471" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net471" />
 </packages>
