--- a/SeudoBuild.Modules/SeudoBuild.Modules.GitSource/packages.config
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.GitSource/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LibGit2Sharp" version="0.26.0" targetFramework="net462" />
-  <package id="LibGit2Sharp.NativeBinaries" version="2.0.267" targetFramework="net462" />
+  <package id="LibGit2Sharp-SSH" version="1.0.22" targetFramework="net462" />
+  <package id="LibGit2Sharp-SSH.NativeBinaries" version="1.0.14" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net462" />
 </packages>
