--- a/SeudoBuild.Agent.Tests/packages.config
+++ b/SeudoBuild.Agent.Tests/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="4.4.0" targetFramework="net471" />
-  <package id="NSubstitute" version="4.2.0" targetFramework="net471" />
-  <package id="NUnit" version="3.12.0" targetFramework="net471" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0-preview6.19303.8" targetFramework="net471" />
-  <package id="System.Threading.Tasks.Extensions" version="4.6.0-preview.18571.3" targetFramework="net471" />
+  <package id="Castle.Core" version="5.1.1" targetFramework="net471" />
+  <package id="NSubstitute" version="5.1.0" targetFramework="net471" />
+  <package id="NUnit" version="4.1.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
 </packages>
