--- a/SeudoBuild.Modules/SeudoBuild.Modules.SFTPDistribute/packages.config
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.SFTPDistribute/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net462" />
-  <package id="SSH.NET" version="2016.1.0" targetFramework="net462" />
+  <package id="SSH.NET" version="2024.0.0" targetFramework="net462" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.0-preview.3.24172.9" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
 </packages>
