--- a/SeudoBuild.Modules/SeudoBuild.Modules.ShellBuild.Shared/SeudoBuild.Pipeline.Modules.ShellBuild.Shared.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.ShellBuild.Shared/SeudoBuild.Pipeline.Modules.ShellBuild.Shared.csproj
@@ -7,7 +7,8 @@
     <OutputType>Library</OutputType>
     <RootNamespace>SeudoBuild.Pipeline.Modules.ShellBuild</RootNamespace>
     <AssemblyName>SeudoBuild.Pipeline.Modules.ShellBuild.Shared</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
