--- a/SeudoBuild.Modules/SeudoBuild.Modules.UnityBuild.Shared/SeudoBuild.Pipeline.Modules.UnityBuild.Shared.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.UnityBuild.Shared/SeudoBuild.Pipeline.Modules.UnityBuild.Shared.csproj
@@ -7,7 +7,8 @@
     <OutputType>Library</OutputType>
     <RootNamespace>SeudoBuild.Pipeline.Modules.UnityBuild</RootNamespace>
     <AssemblyName>SeudoBuild.Pipeline.Modules.UnityBuild.Shared</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -27,9 +28,8 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-      <HintPath>..\..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
