--- a/SeudoBuild.Pipeline.Tests/packages.config
+++ b/SeudoBuild.Pipeline.Tests/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="4.4.0" targetFramework="net471" />
-  <package id="NSubstitute" version="4.2.0" targetFramework="net471" />
-  <package id="NUnit" version="3.12.0" targetFramework="net471" />
-  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net471" />
+  <package id="Castle.Core" version="5.1.1" targetFramework="net471" />
+  <package id="NSubstitute" version="5.1.0" targetFramework="net471" />
+  <package id="NUnit" version="4.1.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
 </packages>
