--- a/SeudoBuild.Client.Unity/SeudoBuild.Client.Unity.csproj
+++ b/SeudoBuild.Client.Unity/SeudoBuild.Client.Unity.csproj
@@ -28,9 +28,6 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="UnityEditor">
       <HintPath>..\..\..\..\..\..\Applications\Unity\Hub\Editor\2022.3.24f1\Unity.app\Contents\Managed\UnityEngine\UnityEditor.dll</HintPath>
@@ -68,7 +65,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
