Advertise build server using mDNS

--- a/SeudoCI.Net/SeudoCI.Net.csproj
+++ b/SeudoCI.Net/SeudoCI.Net.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Makaretu.Dns.Multicast.New" Version="0.31.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
