Fix nullability warnings

--- a/SeudoCI.Pipeline.Modules.GitSource/SeudoCI.Pipeline.Modules.GitSource.csproj
+++ b/SeudoCI.Pipeline.Modules.GitSource/SeudoCI.Pipeline.Modules.GitSource.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="LibGit2Sharp-SSH" Version="1.0.22" />
+      <PackageReference Include="LibGit2Sharp" Version="0.30.0" />
     </ItemGroup>
 
 </Project>
