--- a/SeudoCI.Agent/SeudoCI.Agent.csproj
+++ b/SeudoCI.Agent/SeudoCI.Agent.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.9.1" />
+      <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
       <PackageReference Include="Nancy.Hosting.Kestrel" Version="1.0.1" />
     </ItemGroup>
 
