--- a/SeudoCI.Client.Unity/SeudoCI.Client.Unity.csproj
+++ b/SeudoCI.Client.Unity/SeudoCI.Client.Unity.csproj
@@ -22,6 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
