--- a/SeudoCI.Net.Shared/SeudoCI.Net.Shared.csproj
+++ b/SeudoCI.Net.Shared/SeudoCI.Net.Shared.csproj
@@ -7,4 +7,8 @@
         <LangVersion>12</LangVersion>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
+    </ItemGroup>
+
 </Project>
