--- a/SeudoCI.Net/SeudoCI.Net.csproj
+++ b/SeudoCI.Net/SeudoCI.Net.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
       <PackageReference Include="Makaretu.Dns.Multicast.New" Version="0.31.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
