--- a/SeudoCI.Pipeline.Modules.EmailNotify/SeudoCI.Pipeline.Modules.EmailNotify.csproj
+++ b/SeudoCI.Pipeline.Modules.EmailNotify/SeudoCI.Pipeline.Modules.EmailNotify.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
       <PackageReference Include="MailKit" Version="4.5.0" />
     </ItemGroup>
 
