--- a/SeudoCI.Pipeline.Modules.GitSource/SeudoCI.Pipeline.Modules.GitSource.csproj
+++ b/SeudoCI.Pipeline.Modules.GitSource/SeudoCI.Pipeline.Modules.GitSource.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
       <PackageReference Include="LibGit2Sharp" Version="0.30.0" />
     </ItemGroup>
 
