--- a/SeudoCI.Pipeline.Modules.SFTPDistribute/SeudoCI.Pipeline.Modules.SFTPDistribute.csproj
+++ b/SeudoCI.Pipeline.Modules.SFTPDistribute/SeudoCI.Pipeline.Modules.SFTPDistribute.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
       <PackageReference Include="SSH.NET" Version="2024.0.0" />
     </ItemGroup>
 
