--- a/SeudoCI.Pipeline.Modules.SMBDistribute/SeudoCI.Pipeline.Modules.SMBDistribute.csproj
+++ b/SeudoCI.Pipeline.Modules.SMBDistribute/SeudoCI.Pipeline.Modules.SMBDistribute.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\SeudoCI.Pipeline.Shared\SeudoCI.Pipeline.Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
+    </ItemGroup>
+
 </Project>
